# kicad-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  release-please-config.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  self-test.yml
docs/: architecture.md  capabilities.md  config-schema.md  kicad-bot.schema.json  publishing.md  secrets.md  troubleshooting.md  usage.md
examples/drc-violation/: README.md  drc-violation.kicad_pcb  drc-violation.kicad_pro  drc-violation.kicad_sch  kicad-bot.json
examples/minimal/: README.md  kicad-bot.json  minimal.kicad_pcb  minimal.kicad_pro  minimal.kicad_sch
scripts/: install-kibot-stack.sh
src/kicad_bot/: __init__.py  bom.py  cli.py  diff.py  fab.py  metrics.py  pr_comment.py  quickstart.py  report.py  verify.py
tests/: conftest.py  test_cli.py  test_metrics.py  test_pr_comment.py  test_report.py  test_verify_parse.py
tests/fixtures/: drc_sample.json  erc_sample.json
tests/integration/: test_install_kibot_stack.py  test_verify_e2e.py
tests/unit/: test_install_kibot_stack.py  test_pr_comment.py  test_verify_parse.py
